<resources>
    <string name="app_name">Daygoes</string>
    <string name="popular_vehicles">popular vehicles</string>
    <string name="see_all">see all</string>
    <string name="favourite_vehicles">favourite vehicles</string>
    <string name="filter">filter</string>
    <string name="vehicle_image">Vehicle image</string>
    <string name="vehicle_name">Name</string>
    <string name="route">Route</string>
    <string name="capacity">Capacity</string>
    <string name="no_plate">No. plate</string>
    <string name="ratings">Ratings:</string>
    <string name="like">Like</string>
    <string name="comments">Comments</string>
    <string name="favourite">Favourite</string>
    <string name="share">Share</string>
    <string name="dislike">Dislike</string>
    <string name="offers_and_entertainment">Offers and Entertainment.</string>
    <string name="pay_with_points"><u>Pay ride with points</u></string>
    <string name="pay_ride">Pay ride</string>
    <string name="rate">Rate</string>
    <string name="thumbs_up_icon">thumbs up icon</string>
    <string name="plate">plate</string>
    <string name="favourite_icon">Favourite icon</string>
    <string name="thumbs_down_button">Thumbs down button</string>
    <string name="share_icon">Share icon</string>
    <string name="share_button">Share button</string>
    <string name="_5_stars">5 stars</string>
    <string name="gifting">Buy &amp; Gift</string>
    <string name="enter_comment">Enter comment</string>
    <string name="account_balance"><u>Account balance</u></string>
    <string name="gift_vehicle"><u>Gift vehicle</u></string>
    <string name="Enter_phone_number">Enter your Phone number, we will send you a text to verify your identity.</string>
    <string name="already_registered_login_here">Already registered ? <u>Login here.</u></string>
    <string name="login">login</string>
    <string name="email_icon">email icon</string>
    <string name="password_icon">Password icon</string>
    <string name="email_empty">E-mail required.</string>
    <string name="password_empty">Password required.</string>
    <string name="register">register</string>
    <string name="logo">Logo</string>
    <string name="password">Password</string>
    <string name="pass_less_than_six">Password should have 6 or more characters.</string>
    <string name="auth_failed">Authentication failed, Have you registered?.</string>
    <string name="username_empty">Username required</string>
    <string name="not_yet_registered_register_below">Not yet registered? register below.</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="e_mail_address">E-mail address</string>
    <string name="we_need_your_registered_email_address_to_send_you_password_reset_instructions">We need your registered email address to send you password reset instructions</string>
    <string name="reset_password">reset password</string>
    <string name="back">back</string>
    <string name="forgot_password1">forgot password ?</string>
    <string name="message">Message</string>
    <string name="more_button">more button</string>
    <string name="rate_vehicle">Rate this vehicle </string>
    <string name="sacco">Sacco:</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">Phone number</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="noconnection">Kindly connect to a WIFI network or enable Mobile Data</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="navigation_drawer">Navigation drawer</string>
    <string name="edit_profile">Edit profile</string>
    <string name="profile_icon">Profile icon</string>
    <string name="enter_username">Enter username</string>
    <string name="send_otp">send otp</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="enter_the_otp_sent_to_you">Enter the otp sent to you</string>
    <string name="enter_the_one_time_pin_sent_to_you_as_text_message">Enter the one time pin sent to you as text message</string>
    <string name="verify_otp">verify otp</string>

    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Exclusive offers</string>
    <string name="slide_1_desc">Enjoy unique offers and entertainment only available at our vehicles !</string>

    <string name="slide_2_title">Real time location</string>
    <string name="slide_2_desc">Always have realtime location of your favourite vehicle !</string>

    <string name="slide_3_title">Cashless Payment</string>
    <string name="slide_3_desc">With our MPESA pay option , you can avoid cash payments and having to worry about asking for change / balance !</string>

    <string name="slide_4_title">Quick and safe travel</string>
    <string name="slide_4_desc">Our vehicles are safe, professional and do not waste your time !</string>

    <string name="help">In case of any query feel free to reach us at : \n
        bryannkoech7@gmail.com\n\nYou can also Call us at our helpline numbers : \n
        +254705803084 \n
        +254748880318</string>

    <string name="feedback">Feedback</string>
    <string name="help_center">Help Center</string>
    <string name="explore">Explore</string>
    <string name="app_tour">app tour</string>
    <string name="sign_out">Sign out</string>
    <string name="scene">Offers from various vehicles are found here by clicking "OFFERS", you can also view posts made to all vehicles by selecting "THE SCENE".</string>
    <string name="make_post">Posts</string>
    <string name="title_activity_maps">Map</string>
    <string name="information_text">OTP verification failed, please try again.</string>
    <string name="info_text">OTP verification failed, please try again</string>
    <string name="welcome_text">Welcome</string>
    <string name="chosen_image">Chosen image</string>
    <string name="choose">Choose</string>
    <string name="upload">Upload</string>
    <string name="choose_image">Choose image</string>
    <string name="upload_image">upload image</string>
    <string name="add_comments">Add comments</string>
    <string name="textview">TextView</string>
    <string name="time_stamp">time stamp</string>
    <string name="username">Username</string>
    <string name="picture_posted">picture posted</string>

    <string name="error">An error occurred, please try again</string>
    <string name="success">Successfully sent!</string>
    <string name="chat_button">chat button</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="payment_procedure">You can pay for your ride via Mpesa.\n\n
        Simply follow the following simple steps:\n\n
        1. Go to M-PESA menu on your phone. \n
        2. Go to Lipa na M-PESA, Buy Goods and Services option. \n
        3. Enter the till number provided below. \n
        4. Enter amount. \n
        5. Enter M-PESA pin. \n
        6. SMS confirmation received on phone.</string>
    <string name="title">Title</string>
    <string name="view_images_videos">view images / videos</string>
    <string name="buffering">buffering ....</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_button">Send post</string>
    <string name="make_post1">Make post</string>
    <string name="please_swipe_left_to_view_the_next_image_or_swipe_right_to_view_the_previous_image">PLease swipe left to view the next image or swipe right to view the previous image.</string>


</resources>